<resources>
    <string name="app_name">My First Instant App</string>

    <!-- Labels for student form -->
    <string name="title_form">Systems Engineering Student Form</string>
    <string name="label_cui">CUI:</string>
    <string name="label_dni">DNI:</string>
    <string name="label_first_name">First Name:</string>
    <string name="label_last_name">Last Name:</string>
    <string name="label_date_of_birth">Date of Birth:</string>
    <string name="label_email">Email:</string>
    <string name="label_btn_send">Send form</string>

</resources>